--- a/main.tex
+++ b/main.tex
@@ -13,8 +13,6 @@
 
 % Basic packages XeLaTex
 \usepackage{xecyr}
-%\XeTeXdefaultencoding "cp1251"
-%\XeTeXinputencoding   "cp1251"
 \usepackage[english,russian]{babel} 
 \usepackage{fontspec} 
 \defaultfontfeatures{Ligatures={TeX},Renderer=Basic}
@@ -72,6 +70,7 @@
 % Absolute value declaration
 \DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
 \DeclarePairedDelimiter{\norm}{\|}{\|}
+\DeclareMathOperator\erf{erf}
 
 % Page breaking in multi-line formulae
 \allowdisplaybreaks[1]
@@ -200,9 +199,9 @@ The same in English.
 Изучение нелинейных волновых процессов началось ещё в XIX веке, главным образом, в связи с задачами газо- и гидродинамики. В последствие нелинейные волны были обнаружены и в других областях физики, например, оптике, физике плазмы, электронике. Исследования показали, что нелинейные волны, наблюдаемые в системах самой различной природы, могут быть описаны небольшим количеством одних и тех же уравнений, что дало толчок к развитию теории нелинейных волн, как отдельной науки.
 %Пионером в этой области принято считать Джона Скотта Рассела, наблюдавшего на поверхности водного канала уединённую волну, бежавшую почти без затухания несколько миль. Тогда же Ж.~Буссинеск, а также Д.~Кортевег и Г.~де~Вриз впервые получили нелинейные уравнения, описывающие гравитационные волны на мелкой воде и имеющие солитонное решение. В последствие нелинейные волны были обнаружены и в других областях физики, например, оптике, физике плазмы, электронике. Исследования показали, что нелинейные волны, наблюдаемые в системах самой различной природы, могут быть описаны небольшим количеством одних и тех же уравнений, называемых эталонными. К числу эталонных уравнений помимо упомянутых уравнений Кортевега~-~де~Вриза (КдВ) и Буссинеска относятся нелинейное уравнение Шрёдингера~(НУШ), Бюргерса и ряд других. В середине XX века был разработан математический аппарат, позволивший получить аналитические решения эталонных уравнений, а развитие вычислительной техники дало толчок к численным экспериментам по моделированию нелинейных волн.
 
-Теория нелинейных волн деформации в твёрдых волноводах начала разрабатываться во второй половине XX века, когда исследователям удалось получить первые классические уравнения нелинейной теории волн, описывающих длинные нелинейные волны. Получение упрощённой модели позволило проанализировать свойства нелинейных волн. В частности, выяснилось, что такие волны сохраняют память о прохождении через область волновода с дефектом. Однако, в отличие от линейных волн, нелинейные волны могут распространяться на намного большие расстояния, что делает их перспективным средством в дефектоскопии. 
+Теория нелинейных волн деформации в твёрдых волноводах начала разрабатываться во второй половине XX века, когда исследователям удалось получить первые классические уравнения нелинейной теории волн для длинноволнового случая. Полученные модели позволили проанализировать свойства нелинейных волн. В частности, выяснилось, что такие волны сохраняют память о прохождении через область волновода с дефектом. В отличие от линейных волн, нелинейные волны могут распространяться на намного большие расстояния, что делает их перспективным средством в дефектоскопии. 
 
-Целью настоящей работы является уточнение и систематическое изучение нелинейных продольных волн деформации средствами математического моделирования.
+Целью настоящей работы является изучение нелинейных продольных волн деформации средствами математического моделирования.
 %изложение вывода одного из упрощённых уравнений с целью обобщить его на ряд случаев, не исследованных ранее, а также проведение серии численных экспериментов по моделированию нелинейных волн.
 
 %Работа состоит из введения, трёх глав, заключения и списка литературы. В первой главе приведён обзор литературы, а также подробно сформулирована задача, решению которой посвящена работа. 
@@ -213,8 +212,7 @@ The same in English.
 \chapter{Обзор литературы и постановка задачи}
 
 \section{Нелинейные волновые уравнения и методы их решения}
-Изучение нелинейных волновых процессов является важной научной задачей, берущей начало ещё в XIX веке в связи с исследованием волн, возникающих на поверхности воды. С тех пор нелинейные волны были обнаружены во многих других физических системах, имеющих самую различную природу, а исследования в этой области ведутся и по сей день. Для описания нелинейных волновых явлений была сформирована единая теория, систематическому изложению которой посвящено множество книг, например,~\cite{Dodd}, %\cite{Ablowitz}, 
-\cite{Ablowitz2011}. Приведём здесь некоторые важные положения, необходимые для дальнейшего изложения.
+Изучение нелинейных волновых процессов является важной научной задачей, берущей начало ещё в XIX веке в связи с исследованием волн, возникающих на поверхности воды. С тех пор нелинейные волны были обнаружены во многих других физических системах, имеющих самую различную природу, а исследования в этой области ведутся и по сей день. Для описания нелинейных волновых явлений была сформирована единая теория, систематическому изложению которой посвящено множество книг, например,~\cite{Dodd,Ablowitz2011}. Приведём здесь некоторые важные положения, необходимые для дальнейшего изложения.
 
 Исследование нелинейных волн началось в связи с открытием шотландского инженера Дж. Скотта Рассела, наблюдавшего в 1834 году на поверхности канала уединённую волну, бежавшую несколько миль почти без затухания. Впоследствии Рассел неоднократно воспроизводил это явление в экспериментах и определил соотношение между глубиной канала, скоростью и амплитудой этой волны,
 %~\cite{Russel}
@@ -349,13 +347,13 @@ $$
 \begin{equation}\label{1_ostrovsky_hyp}
 U(x,r,t) = U(x,t), \qquad V(x,r,t) = -\nu r \pdiff U x.
 \end{equation}
-Первая из этих гипотез называется гипотезой плоских сечений и означает, что поперечные сечения стержня остаются плоскими после деформации. Вторая гипотеза аналогична гипотезе Кирхгофа-Лява в теории пластин~\cite{Love}
+Первая из этих гипотез называется гипотезой плоских сечений и означает, что поперечные сечения стержня остаются плоскими после деформации, а вторая гипотеза аналогична гипотезе Кирхгофа-Лява в теории тонких пластин и оболочек~\cite{Love}.
 %A.M. Samsonov has suggested a model with two types of dispersive terms  \cite{S1}, and a model for the rod with a variable radius and elastic moduli \cite{S2}. The coefficients of Samsonov's model with two types of dispersive terms have been refined in the works by A.M. Samsonov and A.V. Porubov  \cite{SP, S_book, P_book}, and a dispersive-dissipative model has been suggested by A.V. Porubov and M.G. Velarde \cite{PV}. A model with three types of dispersive terms has been discussed by V.I. Erofeev et al. (see \cite{E_book} and references therein), however, the nonlinearity coefficient of this model differs from that in the  models of L.A. Ostrovsky and A.M. Sutin, and A.M. Samsonov and A.V. Porubov, while the choice of dispersive coefficients has not been fixed.
-А.\,М.~Самсонов, используя подход Островского и Сутина, предложил модель типа Буссинеска с двумя дисперсионными слагаемыми и обобщил её на случай с меняющимися вдоль оси стержня радиусом и модулями упругости~\cite{S1, S2}. Коэффициенты модели Самсонова с двумя типами дисперсионных членов были позже уточнены в работах А.М.~Самсонова и А.\,В.~Порубова~\cite{SP}.
+А.\,М.~Самсонов, используя подход Островского и Сутина, предложил модель типа Буссинеска с двумя дисперсионными слагаемыми и обобщил её на случай с меняющимися вдоль оси стержня радиусом и модулями упругости~\cite{S1, S2}. Коэффициенты модели Самсонова с двумя типами дисперсионных членов были позже уточнены в работах А.\,М.~Самсонова и А.\,В.~Порубова~\cite{SP}.
 А.\,В.~Порубовым и М.~Веларде предложена дисперсионно-диссипативная модель для длинных волн в упругом стержне, помещённом в вязкоупругую среду~\cite{PV}.
-Модель типа Буссинеска с тремя типами дисперсионных членов обсуждалась В.\,И.~Ерофеевым, однако коэффициент при нелинейном слагаемом в его модели отличается от соответствующего коэффициента у Островского и Самсонова~\cite{E_book}. Все выводы моделей типа Буссинеска в упомянутых исследованиях основывались на использовании представлении Мурнагана для энергии упругой деформации и последующем упрощении полного функционала действия задачи с использованием некоторых гипотез. 
+Модель типа Буссинеска с тремя типами дисперсионных членов обсуждалась В.\,И.~Ерофеевым, однако коэффициент при нелинейном слагаемом в его модели отличается от соответствующего коэффициента у Островского и Самсонова~\cite{E_book}. Все выводы моделей типа Буссинеска в упомянутых исследованиях основывались на представлении Мурнагана для энергии упругой деформации и последующем упрощении полного функционала действия задачи с использованием некоторых гипотез. 
 
-Несколько другой подход к задаче применён в работе X. Дая и X. Фана, которым удалось упростить полные уравнения движения с граничными условиями в виде свободной от напряжений поверхности стержня, сведя их к системе из двух связанных уравнений~\cite{DF}. Для этого была введена система масштабов для переменных и функций так, что масштаб перемещений $h$ и радиус стержня $a$ малы по сравнению с характерной длиной волны $l$: $\varepsilon = h/l \ll 1$, $\delta = a^2/l^2 \ll 1$.
+Несколько другой подход к задаче применён в работе X. Дая и X. Фана, которым удалось упростить полные уравнения движения с граничными условиями в виде свободной от напряжений поверхности стержня, сведя их к системе из двух связанных уравнений~\cite{DF}. Для этого была введена система масштабов для переменных и функций так, что масштаб перемещений $h$ и радиус стержня $a$предполагались малыми по сравнению с характерной длиной волны~$l$: $\varepsilon = h/l \ll 1$, $\delta = a^2/l^2 \ll 1$.
 %\begin{itemize}[noitemsep,topsep=1pt]
 %	\item масштаб перемещений $h$ мал по сравнению с характерной длиной волны $l$: $\varepsilon = h/l \ll 1$,
 %	\item радиус стержня $a$ мал по сравнению с характерной длиной волны $l$: $\delta = a^2/l^2 \ll 1$.
@@ -364,7 +362,7 @@ U(x,r,t) = U(x,t), \qquad V(x,r,t) = -\nu r \pdiff U x.
 %Кроме того, были использованы разложения перемещений в ряд по радиальной координате. Упрощённые уравнения были выведены из полных с помощью метода регулярных возмущений и отбрасывания членов порядка $\mathcal{O}(\varepsilon^2, \varepsilon\delta, \delta^2)$.
 В другой работе X.~Дай и З.~Цай применили аналогичный асимптотический вывод для описания волн в предварительно растянутом гиперупругом стержне, сделанном из материала Муни-Ривлина~\cite{DC}.
 
-Во всех приведённых выше работах твёрдое тело считалось непрерывным. Однако помимо непрерывной модели существует решёточная (дискретная) модель, согласно которой твёрдое тело представляется в виде системы часиц некоторой массы, соединённых пружинами. В рамках такой модели К.\,Р. Хуснутдинова и др., предполагая пружины нелинейно упругими, получили систему разностно-дифференциальных уравнений, которая в континуальном пределе сводится к уравнению типа Буссинеска~\cite{KSZ}. Заметим, что уравнение модели было получено из полных уравнений движения с помощью асимптотических методов без использования упрощающих гипотез. Интересно, что в этом исследовании выведена модель типа Буссинеска тремя дисперсионными слагаемыми, а также система связанных уравнений типа Буссинеска для волн в слоистом волноводе с неидеальным контактом.
+Во всех приведённых выше работах твёрдое тело считалось непрерывным. Однако помимо непрерывной модели существует решёточная (дискретная) модель, согласно которой твёрдое тело представляется в виде системы часиц некоторой массы, соединённых пружинами. В рамках такой модели К.\,Р. Хуснутдинова и др., предполагая пружины нелинейно упругими, получили систему разностно-дифференциальных уравнений, которая в континуальном пределе сводится к уравнению типа Буссинеска~\cite{KSZ}. Заметим, что уравнение модели было получено из полных уравнений движения с помощью асимптотических методов без использования упрощающих гипотез. Интересно, что в этом исследовании была выведена модель типа Буссинеска с тремя дисперсионными слагаемыми, а также система связанных уравнений типа Буссинеска для волн в слоистом волноводе с неидеальным контактом.
 %К.Р. Хуснутдинова и соавторы рассмотрели ангармоническую цепочку осциллирующих диполей и вывели систему разностно-дифференциальных уравнений движения~\cite{KSZ}. Эта система в континуальном пределе, используя масштабирование, выделяющее продольные волны, была сведена к уравнению типа Буссинеска.
 В недавних исследованиях модели типа Буссинеска использовались для изучения распространения длинных продольных уединённых волн деформации в волноводе с расслоением \cite{KS, KT1, KT2}, а некоторые соответствующие экспериментальные наблюдения были опубликованы в \cite{JAP2010, JAP2012}. 
 %Отметим исследования по распространению нелинейных волн на дефектах в решетках \cite{ML} и струнах \cite{AM}. Некоторые другие модели типа Буссинеска были получены для описания распространения поперечных волн большой амплитуды~\cite{DS}.
@@ -584,16 +582,17 @@ U_4 &= \frac{1}{16\mu}\left[\rho c^2 U_{2tt} - (\lambda + 2\mu) U_{2xx} - 4(\lam
 V_1(x, t) = \frac{ \mu(3\lambda + 2\mu) P - \lambda(\lambda + \mu) U_{0x}}{2(\lambda + \mu)^2} + \varepsilon f(x,t) + \delta^2 g(x,t) + O(\varepsilon^2, \varepsilon\delta^2, \delta^4),
 \end{equation}
 где неизвестные функции $f$ и $g$ могут быть найдены из условия равенства нулю коэффициентов при $\varepsilon$ и $\delta^2$ в \eqref{2_bc_rr_subst}. Затем, подстановка $V_1$ в \eqref{2_bc_rx_subst} приводит к следующему уравнению типа Буссинеска относительно $U_0$:
-\begin{eqnarray} \label{eq_u0_asympt}
+\begin{equation} \label{eq_u0_asympt}
 \begin{split}
 \rho c^2 U_{0tt} - \frac{\mu(3\lambda + 2\mu)}{\lambda + \mu}\left(U_{0xx} + \frac{\lambda}{\lambda + \mu} P_x + 2T\right)
 - \varepsilon \left(\gamma_1 U_{0x}^2 + \gamma_2 U_x P + \gamma_3 P^2 \right)_x \\
 + \delta^2 \bigg[\frac{\rho ^2 c^4 U_{0tttt}}{8\mu} + \frac{\mu (3\lambda + 2\mu)^2 U_{0xxxx}}{8(\lambda + \mu)^2} - \frac{\rho c^2 \left(7\lambda^2 + 10\lambda\mu + 4\mu^2\right) U_{0xxtt}}{8(\lambda + \mu)^2} + F \bigg]\\
 + O(\varepsilon^2, \varepsilon\delta^2, \delta^4) = 0.
 \end{split}
-\end{eqnarray}
+\end{equation}
 Здесь нелинейные коэффициенты $\gamma_i$ и функция $F$ представляются в виде:
-\begin{align} \nonumber
+\begin{align} 
+	\nonumber
 	\gamma_1 &= \frac{3n(\lambda + \mu)\lambda^2 + 2\mu \left[9\lambda^3 + 24\mu\lambda^2 + 21\mu^2\lambda + m(3\lambda + 2\mu)^2 + 2\mu^2 (l + 3\mu)\right]}{4 (\lambda + \mu)^3},\\
 	\nonumber
 	\gamma_2 &= \frac{\left[3\lambda^3 + 5\lambda^2\mu + 2\lambda\mu^2 + 4l\mu^2 + 2\lambda m(3\lambda + 2\mu) - 2\lambda n (\lambda + \mu)\right] \mu(3\lambda + 2\mu)}{2(\lambda + \mu)^4},\\
@@ -790,6 +789,19 @@ e_{tt} - c^2 e_{xx} =  \frac{\beta_1}{2 \rho} (e^2)_{xx} + \frac{\nu^2 R^2}{2} e
 
 %{\color{red} We note that regularisation of the type discussed above has been developed independently by T.B. Benjamin, J.L. Bona and J.J. Mahony in the context of fluids \cite{BBM}, and by P. Rosenau, and M.B. Rubin, P. Rosenau and O. Gottlieb, in the context of solids \cite{R, RRG}.}
 
+Поскольку модель с одним дисперсионным членом проще, чем модель с тремя дисперсионными членами, представляется целесообразным получить регуляризованную модель с внешним воздействием. Из уравнения \eqref{eq_u0_def_1} следует асимптотическое соотношение 
+\begin{equation}\label{key}
+e_{tt} = e_{xx} + 2(\nu P_{xx} + T_{x}) + \mathcal{O}(\varepsilon),
+\end{equation}
+с помощью которого можно выразить $e_{tttt}$ и $e_{xxxx}$ через $e_{xxtt}$. Получаемая таким образом из (\ref{eq_u0_def_1}, $i=1$) модель в размерной форме имеет вид:
+\begin{equation}\label{2_eq_fin_reg}
+\begin{split}
+&e_{tt} - c^2 e_{xx} - \frac{2}{\rho}\bigg(\nu P_{xx} + \frac1R T_x\bigg) - \left(\frac{\beta_1}{2\rho} e^2 + \frac{\beta_2}{\rho E} e P + \frac{\beta_3}{2\rho E^2} P^2\right)_{xx} - \frac{\nu^2 R^2}{2} e_{xxtt}\\
+& + \frac{R^2}{4} \lb\frac{1-\nu}{\rho}P_{xxxx} - \frac{1-3\nu+4\nu^3}{E}P_{xxtt}\rb + \frac{(1+\nu)R}{2}\lb \frac{1}{E}T_{xtt} - \frac{1}{\rho}T_{xxx} \rb = 0, \quad i = 1,2,
+\end{split}
+\end{equation}
+
+
 
 \subsection{Вывод с помощью асимптотического разложения}
 В этом разделе предложен вывод уравнения \eqref{eq_u0_def_fin} из полной постановки задачи \eqref{2_eq1_0} и \eqref{2_eq2_0}, используя менее жёсткие предположения о форме асимптотических разложений перемещений и, следовательно, обосновывая разложения \eqref{u_series} в виде степенного ряда по радиальной переменной, использованные в предыдущем разделе.
@@ -978,10 +990,9 @@ e_{tt} - \left(c^2 + \kappa\frac{\beta_1}{\rho}\right) e_{xx} &- \frac{2}{\rho}\
 
 \section{Дисперсионные свойства и солитонные решения}
 
-На рисунке \ref{fig:disp} представлены дисперсионные кривые четырёх упрощённых (с нулевыми напряжениями на поверхности и без предварительного растяжения) уравнения типа Буссинеска, приведённые в предыдущих разделах, а также нижние три ветви точного дисперсионного соотношения Похгаммера-Кри для линейной задачи.
+На рисунке \ref{fig:disp} представлены дисперсионные кривые четырёх упрощённых (с нулевыми напряжениями на поверхности и без предварительного растяжения) линеаризованных уравнения типа Буссинеска, приведённые в предыдущих разделах, а также нижние три ветви точного дисперсионного соотношения Похгаммера-Кри для линейной задачи.
 %we compare the linear dispersion curves of the four basic (i.e. with the free surface and no pre-stretch) Boussinesq-type equations listed in the previous section, as well as plotting the three lowest branches of the exact (Pochhammer - Chree) dispersion relation of the linear problem for a circular rod (see, for example, \cite{DF, bostrm2000, Love}). 
-
-Дисперсионные соотношения имеют вид:
+Дисперсионные соотношения этих моделей имеют вид:
 \begin{align}
 &\frac{2p}{R}\left(q^2 + k^2\right) J_1(pR) J_1(qR) - \left(q^2 - k^2\right)^2 J_0(pR) J_1(qR) -4k^2 p q J_1(pR) J_0(qR) = 0,\\
 & \alpha_1^{(i)} \overline{\omega}^4 - \left(1 - \alpha_2^{(i)} \overline{k}^2\right) \overline{\omega}^2 + \overline{k}^2 \left(1 + \alpha_3^{(i)} \overline{k}^2 \right) = 0, \quad i = 1,2,\\
@@ -996,17 +1007,19 @@ p^2 = \frac{\rho \omega^2}{\lambda + 2\mu} - k^2, \quad q^2 = \frac{\rho \omega^
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.85\linewidth]{Fig2}
-	\caption{Дисперсионные кривые для стержня, сделанного из полистирола, упругие модули которого приведены в таблице~\ref{tab:ps}.}
+	\caption{Дисперсионные кривые для стержня с $\nu = 0.34$. %сделанного из полистирола, упругие модули которого приведены в таблице~\ref{tab:ps}.
+	}
 	\label{fig:disp}
-\end{figure}
+\end{figure} 
 
-Все модели достаточно хорошо описывают нижнюю ветвь дисперсионной кривой, соответствующую длинным продольным волнам. Уравнение Самсонова-Порубова \eqref{eq_dim_SP} обладает коротковолновой неустойчивостью, в то время как остальные три модели не имеют такого эффекта. Отметим, что коротковолновая неустойчивость затрудняет численный счёт, поскольку высокочастотные гармоники в таком случае могут неограниченно возрастать. Полученные в настоящей работе уравнения \eqref{eq_dim_free_surf} в отличие от уравнения Островского-Сутина \eqref{eq_dim_OS} улавливают вторую ветвь дисперсионной кривой.
-Уравнение (\ref{eq_dim_free_surf}, $i=2$) лучше описывает нижнюю ветвь для коротких волн, в то время как (\ref{eq_dim_free_surf}, $i=1$) обладает лучшими дисперсионными свойствами как длинноволновая модель.
+Все модели достаточно хорошо описывают нижнюю ветвь дисперсионной кривой в длинноволновой области. Уравнение Самсонова-Порубова \eqref{eq_dim_SP} обладает коротковолновой неустойчивостью, в то время как остальные три модели не имеют такого эффекта. Отметим, что коротковолновая неустойчивость затрудняет численный счёт, поскольку высокочастотные гармоники в таком случае могут неограниченно возрастать. Полученные в настоящей работе уравнения \eqref{eq_dim_free_surf} в отличие от других уравнений улавливают вторую ветвь дисперсионной кривой, правда описывают её очень неточно. 
+%Уравнение (\ref{eq_dim_free_surf}, $i=2$) лучше описывает нижнюю ветвь для коротких волн, в то время как (\ref{eq_dim_free_surf}, $i=1$) обладает лучшими дисперсионными свойствами как длинноволновая модель.
+
+Отметим, что улавливание ещё одной моды колебаний в численном моделировании является скорее недостатком, чем преимуществом, поскольку к длинным продольным волнам, для изучения которых была построена модель, подмешиваются другие колебания.
 %All models reasonably well describe the lowest branch of the dispersion curves for the long waves. Eq. (\ref{eq_dim_SP})  suffers from a short-wave instability, while other three models do not have this defect. Eq. (\ref{eq_dim_free_surf}) for $i=1,2$, capture the presence of the second branch. We also note that, at least in this example, eq. (\ref{eq_dim_free_surf}) for $i=1$ has better dispersive properties than eq. (\ref{eq_dim_free_surf}) for $i=2$ (as a long-wave model). However, eq. (\ref{eq_dim_free_surf}) for $i=2$ better describes the lowest branch in the short wave region. 
 %One can expect that both derived Boussinesq-type models in (\ref{eq_dim_free_surf}) can be useful, depending on the type of the dominant dispersive radiation in the problem under study. One could also try to artificially ``optimise" the dispersive properties as discussed, for example, in \cite{PAT, ADKM}. However, in this paper we were interested in the ``natural" derivation of Boussinesq-type models.
 
-
-Все четыре уравнения (\ref{eq_dim_free_surf}, $i=1,2$), \eqref{eq_dim_SP} и \eqref{eq_dim_OS} имеют семейство солитонных решений (см. Приложение 1):
+Все четыре уравнения (\ref{eq_dim_free_surf}, $i=1,2$), \eqref{eq_dim_SP} и \eqref{eq_dim_OS} имеют семейство солитонных решений:
 \begin{equation}\label{soliton}
 e_i(x,t) = A\ {\rm sech}^2\ \left[B_{i} \left(x\pm t \sqrt{c^2+\frac{A \beta_1}{3 \rho}}\right) \right], \quad i = \overline {1,4},
 \end{equation}
@@ -1021,9 +1034,9 @@ B_3 &= \sqrt{\frac{A\beta_1}{\left[6\nu E + 2 A \beta_1 (\nu - 1)\right] \nu R^2
 \label{B4}
 B_4 &= \sqrt{\frac{A\beta_1}{(6E + 2A\beta_1)\nu^2 R^2}},
 \end{align}
-для уравнений \eqref{eq_dim_free_surf}, \eqref{eq_dim_SP} и \eqref{eq_dim_OS} соответственно.
+для уравнений \eqref{eq_dim_free_surf}, \eqref{eq_dim_SP} и \eqref{eq_dim_OS} соответственно. Получению солитонных решений посвящено Приложение 1.
 
-На рисунке \ref{fig:soliton} в левой части изображены четыре солитона в стержне из полистирола, задаваемых формулами (\ref{soliton}) -- (\ref{B4}) и имеющих амплитудный параметр $A = -0.07$. Видно, что все четыре солитона имеют разную длину, причём <<регуляризованный>> солитон (\ref{B4}) самый длинный. Однако такая амплитуда солитона деформации превышает предел текучести для полистирола и, следовательно, на практике недостижима. В экспериментах с полистироловым стержнем, описанных в~\cite{Garbuzov}, амплитуда очень мала: $A \sim 10^{-3} - 10^{-4}$. Следовательно, в главном порядке по $A$ во всех четырёх формулах параметр длины примерно равен
+На рисунке \ref{fig:soliton} в левой части изображены четыре солитона, задаваемых формулами (\ref{soliton}) -- (\ref{B4}) и имеющих амплитудный параметр $A = -0.07$. Видно, что все четыре солитона имеют разную длину, причём <<регуляризованный>> солитон (\ref{B4}) самый длинный. Однако такая амплитуда солитона деформации превышает предел текучести для полистирола и, следовательно, на практике недостижима {\color{red} [проверить]}. В экспериментах с полистироловым стержнем, описанных в~\cite{Garbuzov}, амплитуда очень мала: $A \sim 10^{-3} - 10^{-4}$. Следовательно, в главном порядке по $A$ во всех четырёх формулах параметр длины примерно равен
 %In the left part of the Figure \ref{fig:soliton} we plot the four solitons given by the formulae (\ref{soliton}) - (\ref{B4}) for one and the same value of the amplitude parameter $A = -0.05$ and the same elastic moduli shown in Table \ref{tab:ps} (typical for a polystyrene \cite{HughesKelly}). We can see that the four solitons have a different width, with the regularised soliton (\ref{B4}) being the widest. However, this figure is plotted for the value of $A$ which exceeds the yield point for the polystyrene, and therefore in practice this difference would not be important for that particular material (but could be important for some other materials). Indeed, in experiments with polystyrene discussed in the next section the value of $A$ is very small, $A \sim 10^{-3} - 10^{-4}$. Therefore, to leading order in $A$, all four formulae will give the width parameter approximately equal to 
 \begin{equation}\label{}
 B = \sqrt{\frac{A\beta_1}{6\nu^2 E R^2}},
@@ -1033,10 +1046,9 @@ B = \sqrt{\frac{A\beta_1}{6\nu^2 E R^2}},
 	\centering
 	\includegraphics[width=0.54\linewidth]{Fig3a}
 	\includegraphics[width=0.42\linewidth]{Fig3b}
-	\caption{Солитоны в стержне радиуса $R = 10^{-2} m$, сделанном из полистирола при $A = -0.07$ (слева) и $A= -0.001$ (справа). Упругие модули полистирола в таблице~\ref{tab:ps}.}
+	\caption{Солитоны в стержне радиуса $R = 1$~см, сделанном из полистирола при $A = -0.07$ (слева) и $A= -0.001$ (справа). Упругие модули полистирола приведены в таблице~\ref{tab:ps}.}
 	\label{fig:soliton}
 \end{figure}
-
 \begin{table}[h]
 	\begin{center}
 		\begin{tabular}{|c|c|c|c|c|c|}
@@ -1052,7 +1064,7 @@ B = \sqrt{\frac{A\beta_1}{6\nu^2 E R^2}},
 	\vspace{-5mm}
 	\caption{Упругие модули полистирола~\cite{HughesKelly}.}
 	\label{tab:ps}
-\end{table} 
+\end{table}
 
 Репараметризуем солитонное решение \eqref{soliton} через скорость $v$ вместо амплитуды $A$:
 \begin{align}%\label{}
@@ -1080,38 +1092,127 @@ e_i(x, t) &= \frac{3 \rho \left(v^2 - c^2\right)}{\beta_1} {\rm sech}^{2}\left[\
 Отметим, что $\displaystyle 0 < \frac{-\alpha_2^{(i)} - \sqrt{\alpha_2^{(i)2} - 4\alpha_1^{(i)}\alpha_3^{(i)}}}{2\alpha_1^{(i)}} \leqslant 1$ и $\displaystyle \frac{-\alpha_2^{(i)} + \sqrt{\alpha_2^{(i)2} - 4\alpha_1^{(i)}\alpha_3^{(i)}}}{2\alpha_1^{(i)}} \geqslant 1$ $\forall \nu\in[0, 0.5]$ для $i=1,2$. 
 
 Таким образом, в то время как первые три модели дают ограниченный диапазон скоростей солитона сжатия, регуляризованная модель не накладывает ограничения сверху на скорость. Также первые две модели, в отличие от двух других, допускают существование солитонов растяжения. 
+
+Отметим, что помимо математического ограничения на параметры солитона (вещественность параметра ширины $B$) есть физическое ограничение: солитон не должен вызывать пластических деформаций, поскольку модель строилась только для упругих деформаций. Так, для полистирола и широкого круга других материалов именно физическое ограничение сильнее всего сужает диапазон допустимых скоростей, ведь амплитуда солитона пропорциональна $v^2-c^2$. 
+Длинные волны в стержнях из таких материалов целесообразнее всего моделировать с помощью регуляризованной модели, являющейся наиболее простой среди рассмотренных моделей и в рамках которой не учитываются колебания других мод, а также отсутствует коротковолновая неустойчивость.
+
+%Отметим, что все модели выведены в предположении малой амплитуды деформаций, которая пропорциональна относительной разнице $v^2$ и $c^2$. Однако все ограничения сверху на скорость солитона в стержне, например, из материала с $\nu\approx\frac13$ относительно далеки от $c^2$. Однако теоретически могут быть материалы с такими упругими характеристиками 
 %Thus, while the first three model equations give a finite range for the speeds of compression solitary waves, the regularised model does not impose an upper bound (see also the related discussions in  \cite{S_book}). Also, the first two models allow for the existence of solitons of opposite polarity, while the other two models do not allow that.   It would be interesting to compare the predictions for the permissible range of soliton speeds and polarities with direct numerical simulations of the full problem formulation. This could guide some future laboratory experiments.
 
 
 \chapter{Численное решение уравнений нелинейной теории упругости}
+В главе 2 из полных нелинейных уравнений движения 
+%\eqref{2_eq1_0}, \eqref{2_eq2_0} и граничных условий \eqref{2_bc_rr}, \eqref{2_bc_rx} 
+выведены упрощённые модели типа Буссинеска, описывающие длинные продольные волны деформации, которые теперь интересно сравнить с численным решением полных уравнений.
+
 В настоящей работе основной интерес представляют непрерывные гладкие решения нелинейных уравнений. Наилучшим средством для этого является псевдоспектральный метод, с помощью которого мы будем решать как пространственно одномерные уравнения типа Буссинеска, так и полные трёхмерные уравнения движения.
 Отметим, что пседвоспектральный метод чаще всего используется только для пространственной дискретизации, в то время как дискретизация по времени осуществляется с помощью стандартных методов, например, Рунге-Кутты 4-го порядка.
 %Опишем метод подробнее.
 
-Пседвоспектральный метод основан на поиске решения в некотором подпространстве, имеющем конечный базис, в качестве которого чаще всего выбирается базис Фурье (набор синусов и косинусов) или семейство ортогональных многочленов. Выбор базиса определяется граничными условиями Дирихле: базисные функции должны удовлетворять им. Псевдоспектральный метод, называемый также методом коллокации, является одним из семейства спектральных методов. Его отличительной особенностью является выволнение уравнений не на всей области, а лишь в конечном наборе точек, называемых точками коллокации. Выбор этих точек определяется используемым базисом: для базиса Фурье точки эквидистантно распределены по области, а для многочленов Чебышёва эти точки должны быть распределены согласно чебышёвской плотности, с разрежением в центре области и сгущением к краям. Неправильный выбор точек коллокации грозит возникновением больших ошибок в решении.
+Пседвоспектральный метод основан на поиске решения в некотором подпространстве, имеющем конечный базис, в качестве которого чаще всего выбирается базис Фурье (набор синусов и косинусов) или семейство ортогональных многочленов. Выбор базиса определяется граничными условиями Дирихле: базисные функции должны удовлетворять им. 
 
-\section{Одномерные модели}
-\subsection{Численная схема}
+Псевдоспектральный метод, называемый также методом коллокации, является одним из семейства спектральных методов. Его отличительной особенностью является выполнение уравнений не на всей области, а лишь в конечном наборе точек, называемых точками коллокации. Выбор этих точек определяется используемым базисом: для базиса Фурье точки равномерно распределены по области, а для многочленов Чебышёва эти точки должны быть распределены согласно чебышёвской плотности с разрежением в центре области и сгущением к краям. Неправильный выбор точек коллокации грозит возникновением больших ошибок в решении.
+
+\section{Численная схема}
+\subsection{Одномерное уравнение типа Буссинеска}
 Сформулируем задачу Коши для одномерного уравнения типа Буссинеска:
 \begin{equation}\label{3_boussinesq4}
 \begin{split}
-e_{tt} - \left(c^2 + \kappa\frac{\beta_1}{\rho}\right) e_{xx} - \frac{2}{\rho}\left[\left(\nu + \kappa \frac{\beta_2}{2E} \right) P_{xx} + \frac1R T_x\right] - \left(\frac{\beta_1}{2\rho} e^2 + \frac{\beta_2}{\rho E} e P + \frac{\beta_3}{2\rho E^2} P^2\right)_{xx}\\
-+ R^2 \left(\frac{\alpha_1}{c^2} e_{tttt} + \alpha_2 e_{xxtt} + c^2\alpha_3 e_{xxxx} + \gamma_1 P_{xxxx} + \gamma_2 P_{xxtt} +\gamma_3 T_{xtt} + \gamma_4 T_{xxx} \right) = 0.
+e_{tt} - c^2 e_{xx} - \frac{2}{\rho}\left[\nu P_{xx} + \frac1R T_x\right] - \left(\frac{\beta_1}{2\rho} e^2 + \frac{\beta_2}{\rho E} e P + \frac{\beta_3}{2\rho E^2} P^2\right)_{xx}\\
++ R^2 \left(\alpha e_{xxtt} + \gamma_1 P_{xxxx} + \gamma_2 P_{xxtt} +\gamma_3 T_{xtt} + \gamma_4 T_{xxx} \right) = 0.
 \end{split}
 \end{equation}
 
-\subsection{Численные эксперименты}
+Будем решать регуляризованное уравнение типа Буссинеска с помощью псевдоспектрального метода Фурье. Для этого предствим неизвестную функцию в виде:
 
-\subsubsection{Эволюция солитона}
+\subsection{Полные трёхмерные уравнения}
+Рассмотрим стержень круглого сечения длиной $L$ и радиусом $R$.
+Выпишем полные уравнения движения и граничные условия в векторном виде:
+\begin{align}
+\label{3_eqns_full}
+&\rho \ddot{\vect{U}}(\vect{X}, t) = \nabla\cdot\tens{P},\quad \vect{X} \in \Omega = \lbrace(x, r, \varphi) \in \mathbb{R}^3 \, | \, -L<x<L, \; 0<r<R, \; 0<\varphi<2\pi\rbrace\\
+\label{3_bc_full}
+&\tens{P} \cdot \vect{n} = \vect{P_b}, \quad r = R\\
+&\vect{U}\big|_{x=0} = \vect{U}\big|_{x=L}\\
+&\tens{P} = (\lambda + 2\mu)I_1 \tens{I} - 2\mu I2 ...\\
+&\tens{E} = \frac12 \lb \nabla\vect{U}^T + \nabla\vect{U} + \nabla\vect{U}^T \cdot \nabla\vect{U} \rb
+\end{align}
+Будем искать решение этой задачи в некотором конечномерном пространстве, задаваемым системой базисных функций $\lbrace\Phi_n(x), \Psi_m(r), \Theta_l(\varphi)\rbrace$. Представим неизвестную функцию $\vect{U}$ в виде 
+\begin{equation}\label{3_spect_expan}
+\vect{U}(x,r,\varphi,t) = \sum a(t) \Phi_n(x) \Psi_m(r) \Theta_l(\varphi)
+\end{equation}
+Подстановка \eqref{3_spect_expan} в уравнения \eqref{3_eqns_full} приводит к системе однородных дифференциальных уравнений по времени.
 
-\subsubsection{Генерация из удара по торцу стержня}
+\section{Численные эксперименты}
 
+\subsection{Образование солитона из начального условия}
+Будем решать задачу Коши для полных уравнений, где начальное условие задано распространяющимся вправо со скоростью $c$ гладким импульсом:
+\begin{flalign}
+\label{3_ic_u}
+&\qquad U_0 (x, r) = A_0 W \erf\lb \frac{x - L/2}{W}\rb,&  &\dot{U}_0 (x, r) = -c \pdiff{U_0}{x}&\\
+&\qquad V_0(x, r) = -\nu r \pdiff{U_0}{x},& &\dot{V}_0 (x, r) = -c \pdiff{V_0}{x}&
+\end{flalign}
+На рис. ... представлена эволюция этого импульса и зарождение солитона при $A_0=0.05$, $W=20$, где по горизонтальной оси отложена бегущая координата $\xi = x - ct$.
+
+Сравним оторвавшийся импульс с солитонным решением уравнения \eqref{eq_dim_free_surf}:
+
+Теперь решим аналогичную задачу Коши для регуляризованного уравнения типа Буссинеска, где начальное условие задано формулой \eqref{3_ic_u} (выражение поперечного перемещения $V$ через продольное $U$ уже <<зашито>> в модель).
+
+На рис. ... представлено сравнение эволюции импульса согласно полным уравнениям и согласно модели типа Буссинеска.
+
+На основе численных решений задачи Коши для полных уравнений с начальными импульсами разной амплитуды построим <<экспериментальную>> зависимость скорости/длины от амплитуды образовавшегося солитона и сравним её с теоретической, задаваемой формулой ...
+
+\subsection{Образование солитона из удара по торцу стержня}
+Модель типа Буссинеска строилась для бесконечного стержня, следовательно, она применима для описания волн только вдали от торцов стержня. Моделирование волн вблизи торцов возможно с помощью полных уравнений движения. На рис. ... представлены результаты 
+
+\subsection{Образование солитона из бегущего по поверхности напряжения}
 
 \chapter{Обработка экспериментальных данных}
 
 
 \chapter*{Заключение}
 \addcontentsline{toc}{chapter}{Заключение}
+
+
+\chapter*{Приложение 1}	
+%All Boussinesq-type equations discussed in the paper can be cast in the form
+Все уравнения типа Буссинеска, обсуждавшиеся в настоящей работе, могут быть записаны в виде:
+\begin{equation}
+e_{tt} - c^2 e_{xx} = d_1 (e^2)_{xx} + d_2 e_{tttt} + d_3 e_{ttxx} + d_4 e_{xxxx},
+\end{equation}
+где $c$ и $d_i$ -- некоторые постоянные. Будем искать решения в виде волн, бегущих влево или вправо:
+%where $c$ and $d_i, i=\overline{1, 4}$ are some constants. Looking for the right- or left-propagating travelling-wave solutions
+$
+e = e(\xi), \; \mbox{где} \; \xi = x \pm vt,
+$
+%we obtain the ordinary differential equation
+что сводит исходное уравнение к обыкновенному дифференциальному уравнению:
+\begin{equation}
+(v^2 - c^2) e'' = d_1 (e^2)'' + (d_2 v^4 + d_3 v^2 + d_4) e^{IV}.
+\label{ODE}
+\end{equation}
+Интегрируя это уравнения по $\xi$ дважды и требуя, чтобы на бесконечности не было возмущений $e, e', e'', e''' \to 0$ при $\xi \to \pm \infty$, получаем уравнение:
+%Integrating this equation with respect to $\xi$ twice, and requiring that $e, e', e'', e''' \to 0$ as $\xi \to \pm \infty$, we obtain the equation
+\begin{equation}
+e'' = \frac{(v^2-c^2) e - d_1 e^2}{d_2 v^4 + d_3 v^2 + d_4},
+\end{equation}
+которое может рассматриваться как уравнение движения частицы единичной массы в поле потенциальной силы. Интеграл энергии имеет вид:
+%which can be viewed as Newton's equation of motion for a particle of unit mass in a potential field. The energy integral has the form
+\begin{equation}
+E = \frac 12 \left (e' \right )^2 - \frac{3 (v^2-c^2) e^2 - 2 d_1 e^3}{6 (d_2 v^4 + d_3 v^2 + d_4)},
+\end{equation}
+а солитонное решение соответствует нулевому уровню энергии $E=0$. Разделение переменных и последующая подстановка
+%and the soliton solution corresponds to the zero energy level $E=0$. Separation of variables and the subsequent substitution
+$$
+e = \frac{3 (v^2 - c^2)}{2 d_1} {\rm sech}^2 \theta
+$$
+позволяет получить солитонное решение в виде:
+%allow one to obtain the solitary wave solution in the form
+\begin{equation}
+e = \frac{3 (v^2 - c^2)}{2 d_1} {\rm sech}^2 \left [\sqrt{\frac{v^2 - c^2}{4 (d_4 + d_3 v^2 + d_2 v^4)}} (x \pm v t)\right ]
+\end{equation}
+для таких значений параметра $v$, что это решение вещественнозначное.
+%for the values of the parameter $v$ when this is a real-values solution.
 
 \begin{thebibliography}{99}
 	% Nonlinear waves: history review and general books 
